--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body {
   width: 10px;
   height: 10px;
   border: 2px solid;
-  border-color: transparent transparent #565656 #565656;
+  border-color: transparent transparent rgba(255, 255, 255, 0.2) rgba(255, 255, 255, 0.2);
   transform: translate(-50%, -50%) rotate(-45deg);
   pointer-events: none;
 }
